--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-onesignal": "^2.0.4",
     "typescript": "5.1.3",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
